<resources>
    <string name="app_name">Remote2</string>
    <string name="bt_enabled">Bluetooth enabled</string>
    <string name="enabled">Enabled</string>
    <string name="Disabled">Disabled</string>
    <string name="bt_disabled">Bluetooth Disabled</string>
    <string name="on_light">Lights On</string>
    <string name="off_light">Lights Off</string>
    <string name="rx">RX</string>
    <string name="lt_read_buffer"><![CDATA[<Read Buffer>]]></string>
    <string name="lt_bluetooth_status"><![CDATA[<Bluetooth Status>]]></string>
    <string name="bt_not_found">Status: Bluetooth not found</string>
    <string name="hc_module">HC-05</string>
    <string name="connecting">Connecting...</string>
    <string name="on_matrix">Matrix On</string>
    <string name="off_matrix">Matrix Off</string>
    <string name="new_name">Remote</string>
    <string name="cabin_control">Cabin Lights   </string>
    <string name="status">Status:</string>
    <string name="logo_header">Vibe logo header</string>
    <string name="lighting">Mood Lighting</string>
    <string name="cabin_lights">Cabin Lights</string>
    <string name="brightness">Brightness</string>
    <string name="cloud_lights">Cloud Lights</string>
    <string name="chameleon_txt">Chameleon</string>
    <string name="logo_choice">logo choice</string>
    <string name="stars_choice">stars choice</string>
    <string name="video_choice">video choice</string>
    <string name="off_button">off button</string>
    <string name="logo_txt">Logo</string>
    <string name="choice_one">First Choice</string>
    <string name="choice_two">Cloud two</string>
    <string name="choice_three">Cloud three</string>
    <string name="choice_four">Cloud four</string>
    <string name="choice_five">Coud five</string>
    <string name="choice_six">Cloud six</string>
    <string name="choice_seven">Cloud seven</string>
    <string name="choice_eight">Cloud eight</string>
</resources>
