<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@drawable/dialog_soft"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vibe.remote2.LEDControl">


    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="600dp"
        android:layout_centerInParent="true"
        android:hapticFeedbackEnabled="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/logo_header"
            android:layout_width="202dp"
            android:layout_height="67dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_header"
            android:src="@drawable/ic_vibe3" />

        <TextView
            android:id="@+id/cabin_lighting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/work_sans_semibold"
            android:text="@string/lighting"
            android:textColor="@color/font_color"
            android:textSize="30sp" />

        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/pBar"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="250dp"
            android:layout_marginTop="100dp"
            app:SpinKit_Color="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="100dp"
            android:layout_marginTop="80dp">

            <TextView
                android:id = "@+id/cabin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/work_sans"
                android:text = "@string/cabin_lights"
                android:textColor="@color/font_color"
                android:textSize="18sp"/>

            <Switch
                android:id="@id/switch_neopixel"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:checked="false"
                android:showText="false"
                android:switchMinWidth="50dp"
                android:switchPadding="20dp"
                android:switchTextAppearance="@style/TextAppearance.AppCompat"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/light_switch"
                tools:checked="false" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id ="@+id/bright_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/work_sans"
                android:text = "@string/brightness"
                android:textColor="@color/font_color"
                android:textSize="18sp"/>

            <ImageButton
                android:id="@+id/btn_dim"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/brighten_btn"
                android:src ="@drawable/ic_bright4"
                android:gravity="center_vertical|fill_horizontal" />

            <ImageButton
                android:id="@+id/btn_brighten"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/brighten_btn"
                android:src ="@drawable/ic_bright7"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id = "@+id/cloud_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/work_sans"
                android:text = "@string/cloud_lights"
                android:textColor="@color/font_color"
                android:textSize="18sp"/>

            <Switch
                android:id="@+id/btn_cloud"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:checked="false"
                android:showText="false"
                android:switchMinWidth="50dp"
                android:switchPadding="20dp"
                android:switchTextAppearance="@style/TextAppearance.AppCompat"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/light_switch"
                tools:checked="false" />

        </LinearLayout>
        <GridLayout
            android:layout_marginTop="40dp"
            android:layout_marginStart="0dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="5"
            android:rowCount="2">

            <ImageButton
                android:contentDescription="@string/choice_one"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@id/btn_one"
                android:background="@drawable/cloud_choicebtn"
                android:src = "@drawable/ic_numberone"
                android:layout_column="0"
                android:layout_row = "0" />
            <ImageButton
                android:contentDescription="@string/choice_two"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@id/btn_two"
                android:background="@drawable/cloud_choicebtn"
                android:src = "@drawable/ic_numbertwo"
                android:layout_column="1"
                android:layout_row = "0" />
            <ImageButton
                android:contentDescription="@string/choice_three"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@id/btn_three"
                android:background="@drawable/cloud_choicebtn"
                android:src = "@drawable/ic_numberthree"
                android:layout_column="2"
                android:layout_row = "0" />
            <ImageButton
                android:contentDescription="@string/choice_four"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@id/btn_four"
                android:background="@drawable/cloud_choicebtn"
                android:src = "@drawable/ic_numberfour"
                android:layout_column="3"
                android:layout_row = "0" />
            <ImageButton
                android:contentDescription="@string/choice_five"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@id/btn_five"
                android:background="@drawable/cloud_choicebtn"
                android:src = "@drawable/ic_numberfive"
                android:layout_column="0"
                android:layout_row = "1" />
            <ImageButton
                android:contentDescription="@string/choice_six"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@id/btn_six"
                android:background="@drawable/cloud_choicebtn"
                android:src = "@drawable/ic_numbersix"
                android:layout_column="1"
                android:layout_row = "1" />
            <ImageButton
                android:contentDescription="@string/choice_seven"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@id/btn_seven"
                android:background="@drawable/cloud_choicebtn"
                android:src = "@drawable/ic_numberseven"
                android:layout_column="2"
                android:layout_row = "1" />
            <ImageButton
                android:contentDescription="@string/choice_eight"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@id/btn_eight"
                android:background="@drawable/cloud_choicebtn"
                android:src = "@drawable/ic_numbereight"
                android:layout_column="3"
                android:layout_row = "1" />

            <ImageButton
                android:contentDescription="@string/choice_eight"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@id/btn_cloud_off"
                android:background="@drawable/cloud_choicebtn"
                android:src = "@drawable/ic_cancel48"
                android:layout_column="4"
                android:layout_row = "1" />

        </GridLayout>

    </LinearLayout>

</RelativeLayout>